force-app/main/default/objects/ASF_IntegrationHeader__mdt/ASF_IntegrationHeader__mdt.object-meta.xml
<CustomObject>
    <label>Integration Header</label>
    <pluralLabel>Integration Headers</pluralLabel>
</CustomObject>