force-app/main/default/objects/ASF_IntegrationHeader__mdt/fields/ASF_HeaderGroup__c.field-meta.xml
<CustomField>
    <fullName>ASF_HeaderGroup__c</fullName>
    <label>Header Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>