force-app/main/default/objects/ASF_IntegrationHeader__mdt/fields/ASF_Headerkey__c.field-meta.xml
<CustomField>
    <fullName>ASF_Headerkey__c</fullName>
    <label>Header key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>