force-app/main/default/objects/ASF_IntegrationHeader__mdt/fields/ASF_HeaderValue__c.field-meta.xml
<CustomField>
    <fullName>ASF_HeaderValue__c</fullName>
    <label>Header Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>