force-app/main/default/objects/ASF_IntegrationHeader__mdt/fields/ASF_IsActive__c.field-meta.xml
<CustomField>
    <fullName>ASF_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>